# CustomTkinterBuilder

./: CodeGenerator.py  LICENSE  MANIFEST.in  PackArgs.py  README.md  WelcomePage.py  cli.py  config.json  ctk_widget_pack.py.j2  dragndrop.py  get_path.py  main.py  properties.py  pyproject.toml  requirements.txt  setup.py  theme_colors.py  widgets.py
.github/workflows/: publish.yml  stale.yml
Examples/HelloWorld/: HelloWorld.json
Examples/Login-Demo/: Login-Demo.json
Examples/Spotify-Demo/: Spotify-Demo.json
Examples/Youtube-Demo/: Youtube-Demo.json
ThemeAssets/: ui_colors.json
Themes/: ctktheme.json
Widgets/: Button.py  CheckBox.py  ComboBox.py  Entry.py  Frame.py  Label.py  Main.py  OptionMenu.py  ProgressBar.py  RadioButton.py  ScrollableFrame.py  Scrollbar.py  SegmentedButton.py  Slider.py  Switch.py  TextBox.py  ThemedButton.py  ThemedText.py  __init__.py
customtkinterbuilder/: CodeGenerator.py  ColorConstants.py  WelcomePage.py  __main__.py  component.py.j2  config.json  dragndrop.py  get_path.py  main.py  properties.py  utils.py  widgets.py
customtkinterbuilder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
customtkinterbuilder/Components/: BaseComponent.py  LabelEntry.py  __init__.py
customtkinterbuilder/CustomWidgets/: AppearanceButton.py  MessageBox.py  ToolBar.py
customtkinterbuilder/Themes/: FlipperZero.json  ctktheme.json
customtkinterbuilder/Widgets/: Button.py  CheckBox.py  ComboBox.py  Frame.py  Main.py  OptionMenu.py  RadioButton.py  ScrollableFrame.py  Scrollbar.py  (+2 more)
temp/: hello_world.txt
(+6 files in other folders)
