[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomTkinterBuilder"
version = "1.0.0"
description = "Free and open source UI builder for CustomTkinter"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "darkdetect~=0.8.0",
  "userpaths~=0.1.3",
  "icecream~=2.1.3",
  "customtkinter~=5.2.2",
  "CustomtkinterCodeViewer~=0.0.3",
  "pillow~=10.3.0",
  "requests~=2.31.0",
  "tkinterdnd2~=0.3.0",
  "thefuzz~=0.22.1"
]

[project.scripts]
customtkinterbuilder = "cli:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "cli",
  "CodeGenerator",
  "dragndrop",
  "get_path",
  "main",
  "PackArgs",
  "properties",
  "theme_colors",
  "WelcomePage",
  "widgets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["Widgets*"]
namespaces = true

[tool.setuptools.package-data]
"*" = [
  "Assets/*",
  "Assets/**/*",
  "ThemeAssets/*",
  "ThemeAssets/**/*",
  "Themes/*.json",
  "Icons/*",
  "Icons/**/*",
  "Examples/*",
  "Examples/**/*",
  "Logo.ico",
  "Logo.png",
  "Logo-WelcomePage.png",
  "config.json"
]
